<resources>
    <string name="app_name">DestinaFind</string>
    <string name="login_button">Sign In</string>
    <string name="register_button">Register</string>
    <string name="hello_blank_fragment">Ini Homepage</string>
    <string name="email_input_message">Email</string>
    <string name="password_input_message">Password</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="update_profile">Update Profile</string>
    <string name="update_vendor">Update Vendor</string>
    <string name="update_admin">Update Admin</string>
    <string name="logout_button">Logout</string>
    <string name="next_button">Next</string>
    <string name="image_preview">Image Preview</string>
    <string name="edit_image">Edit Image</string>
    <string name="title">Title</string>
    <string name="enter_title">Enter title</string>
    <string name="description">Description</string>
    <string name="enter_description">Enter description</string>
    <string name="save">Save</string>
    <string name="select_location">Select Location</string>
</resources>